[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/dio.png" type="Texture" id=1]
[ext_resource path="res://scripts/eye.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 24.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 222, 64 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 292, 256 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 24, 24 )

[node name="eye" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="Icon" type="Sprite" parent="."]
position = Vector2( 1.19209e-07, -1.19209e-07 )
scale = Vector2( -0.331, 0.262 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="move" type="Node2D" parent="."]
position = Vector2( 112, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="rc" type="RayCast2D" parent="."]
position = Vector2( -16, 0 )
scale = Vector2( 1, 38 )
enabled = true
cast_to = Vector2( 48, 0 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="nma" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="nma"]
position = Vector2( 98, 0 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 71.4, -1.90735e-06 )
scale = Vector2( 2.65278, 2.03125 )
polygon = PoolVector2Array( -26.9152, 0, 144, -32, 144, 32 )

[node name="area" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="area"]
position = Vector2( 164, 0 )
shape = SubResource( 4 )

[node name="hit" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit"]
shape = SubResource( 5 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="nma" to="." method="_on_nma_body_entered"]
[connection signal="body_exited" from="nma" to="." method="_on_nma_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="area" to="." method="_on_area_body_entered"]
[connection signal="body_exited" from="area" to="." method="_on_area_body_exited"]
[connection signal="body_entered" from="hit" to="." method="_on_hit_body_entered"]
